# my-opencv-template

./: .gitignore  CMakeLists.txt  README.md
opencvTemplateMain/: CMakeLists.txt  opencvTemplateMain.cpp  opencvTemplateMain.h
src/: CMakeLists.txt
